Implemented the landscape editor

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -24,3 +24,24 @@ a#magic-window {
     color: white;
     margin-top: 1em;
 }
+
+#submit {
+    padding: 1em;   
+}
+
+/* editor */
+#main {
+    width: 100%;
+    height: 100%;
+    background-color: #999999;
+}
+table {
+    border-color: #333333;
+    width: 50%;
+    height: 50%;
+    font-size: 6pt;
+}
+td {
+    border-color: #111111;
+    color: #333333;
+}
